# eranif-wxCrafterCB

./: CMakeLists.txt  NewCodeBlocksProjectWizard.cpp  NewCodeBlocksProjectWizard.h  NewWxCrafterFileDlg.cpp  NewWxCrafterFileDlg.h  README.md  TODO.TXT  UI.cpp  UI.h  UI.wxcp  UI_wxcraftercb_bitmaps.cpp  installer.iss  manifest.xml  wxCrafterCB.cbplugin  wxCrafterCB.cpp  wxCrafterCB.h  wxCrafterCB.project  wxCrafterCB.workspace  wxCrafterCBSettings.cpp  wxCrafterCBSettings.h  wxCrafterSettingsDlg.cpp  wxCrafterSettingsDlg.h  wxCrafterTab.cpp  wxCrafterTab.h  wxcHelper.cpp  wxcHelper.h
Resources/Templates/wxFrameApp/: wxCrafterCBTemplate.cbp  wxcrafter.wxcp
wxcLib/: CMakeLists.txt  clSocketBase.cpp  clSocketBase.h  clSocketServer.cpp  clSocketServer.h  json_node.cpp  json_node.h  wxcConnector.cpp  wxcConnector.h  wxcLib.mk  wxcLib.project  wxcLib.txt
